--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^6.14.0",
     "bcryptjs": "^3.0.2",
+    "cookie": "^1.0.2",
+    "jose": "^6.0.12",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.542.0",
     "next": "15.4.3",
+    "pg": "^8.16.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
